--- a/index.html
+++ b/index.html
@@ -1,22 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <title>jiwon for react JS</title>
+    </head>
 <body>
     <div id="root"></div>
 </body>
-<!--import JS-->
+<!--import JS and Babel-->
 <script src="https://unpkg.com/react@17.0.2/umd/react.production.min.js"></script>
 <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
-<script>
+<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+<script type="text/babel">
     const root = document.getElementById("root")
-    const h3 = React.createElement("h3", {
-        onMouseEnter : () => console.log("entered!"),
-    }, "hi,");
-    
-    const btn = React.createElement("button", {
-        onCllick : () => console.log("i'm Click!"), //eventlistener도 바로 넣기.
-    }, "Click me!");
+    const Title = (
+        <h3 id="title" onMouseEnter={() => console.log("entered!")}>
+            i'm a title
+        </h3>);
 
-    const container = React.createElement("div", null, [h3, btn]);
-    ReactDOM.render(container, root);
+/* 더 어려운 방식 ... not JSX
+    const h3 = React.createElement("h3", {
+         onMouseEnter : () => console.log("entered!"),
+     }, "hi,");
+ */
+
+    const Button = (<button id="btn" onCllick={() => console.log("clicked!")}
+        style={{backgroundColor:"blue",}}>
+        click me!
+        </button>);
+
+/*     const btn = React.createElement("button", {
+        onCllick : () => console.log("i'm Click!"), //event listener도 바로 넣기.
+        style: {
+            backgroundColor : "blue",
+        },
+    }, "Click me!");
+ */
+
+    const container = React.createElement("div", null, [Title, Button]);
+    ReactDOM.render(container, root); //container를 root이라는 div에서 나타낸당.
+
+    /*
+    JSX = js 확장,
+    변환하는 과정 필요함. Babel 사용함.
+    */
 </script>
 </html>
