--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <script type="text/babel">
     const root = document.getElementById("root")
-    const Title = (
+    function Title(){
+        return(
         <h3 id="title" onMouseEnter={() => console.log("entered!")}>
             i'm a title
         </h3>);
+    }
 
 /* 더 어려운 방식 ... not JSX
     const h3 = React.createElement("h3", {
@@ -23,10 +25,12 @@
      }, "hi,");
  */
 
-    const Button = (<button id="btn" onCllick={() => console.log("clicked!")}
+    function Button(){
+        return (<button id="btn" onCllick={() => console.log("clicked!")}
         style={{backgroundColor:"blue",}}>
         click me!
         </button>);
+    }
 
 /*     const btn = React.createElement("button", {
         onCllick : () => console.log("i'm Click!"), //event listener도 바로 넣기.
@@ -36,12 +40,17 @@
     }, "Click me!");
  */
 
-    const container = React.createElement("div", null, [Title, Button]);
-    ReactDOM.render(container, root); //container를 root이라는 div에서 나타낸당.
+    const Container = <div>
+        <Title /> <Button /> 
+        </div>;
+    
+    
+    ReactDOM.render(Container, root); //container를 root이라는 div에서 나타낸당.
 
     /*
     JSX = js 확장,
     변환하는 과정 필요함. Babel 사용함.
+    컴포넌트의 첫글자는 대문자로
     */
 </script>
 </html>
