--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         JSX = js 확장,
         변환하는 과정 필요함. Babel 사용함.
         컴포넌트의 첫글자는 대문자로
+        reactDom = react element 를 body에 위치시킨다.
         */
     </script>
 </html>
